--- a/ebooks/example_spambase_xgb.qmd
+++ b/ebooks/example_spambase_xgb.qmd
@@ -1,4 +1,4 @@
-# Illustration on Abalone dataset II {#sec-real-example-xgb}
+# Recalibration: Example {#sec-real-example-xgb}
 
 :::{.callout-note}
 
