--- a/ebooks/metrics.qmd
+++ b/ebooks/metrics.qmd
@@ -116,19 +116,18 @@ compute_metrics <- function(obs,
                             scores,
                             true_probas = NULL) {
 
-  # True MSE
+  # True MSE, MAE
   if (!is.null(true_probas)) {
     mse <- mean((true_probas - scores)^2)
-  } else {
-    mse <- NA
-  }
-
-  # True MAE
-  if (!is.null(true_probas)) {
     mae <- mean(abs(true_probas - scores))
   } else {
+    mse <- NA
     mae <- NA
   }
+
+  # Log loss
+  scores_pred <- pmin(pmax(scores, 1e-15), 1 - 1e-15)
+  log_loss <- calculate_log_loss(obs, scores_pred)
 
   # AUC
   AUC <- pROC::auc(obs, scores, levels = c("0", "1"), quiet = TRUE) |>
@@ -147,14 +146,23 @@ compute_metrics <- function(obs,
   pred_class <- ifelse(scores > .5, yes = 1, no = 0)
   acc <- sum(diag(table(obs = obs, pred = pred_class))) / length(scores)
 
+  # Kendall tau
+  kendall_cor <- cor(true_probas, scores, method = "kendall")
+  # Spearman's rank correlation
+  spearman_cor <- cor(true_probas, scores, method = "spearman")
+
   tibble(
     mse = mse,
     mae = mae,
     acc = acc,
     AUC = AUC,
     brier = brier,
-    ici = ici
+    ici = ici,
+    log_loss = log_loss,
+    kendall = kendall_cor,
+    spearman = spearman_cor
   )
+
 }
 ```
 
